| Bug #50118 | complete Cluster crash, lost data | ||
|---|---|---|---|
| Submitted: | 6 Jan 2010 21:05 | Modified: | 18 Jan 2010 15:27 |
| Reporter: | Stefan Auweiler | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S1 (Critical) |
| Version: | 5.1.35-ndb-7.0.7-cluster-gpl | OS: | Solaris (5.10 x86) |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | cluster, crash, mysqld | ||
[6 Jan 2010 21:05]
Stefan Auweiler
[6 Jan 2010 22:00]
Jonas Oreland
please upload the ndb_X_trace files too (or use ndb_error_reporter which will gather all logs)
[7 Jan 2010 10:13]
Stefan Auweiler
I've added files to the FTP Upload folder, containing the bug nr in their names: bug-data-50118.README has some more information on the files. Regards Stefan
[11 Jan 2010 11:02]
Martin Skold
The uploaded ndb_error_report file is empty.
[11 Jan 2010 18:22]
Stefan Auweiler
Yes, but for that reason, I uploaded the files via FTP, as described in your HowTo's. Did you find these files? Thanks
[12 Jan 2010 13:54]
Gustaf Thorslund
hillbilly% cat bug-data-50118.split.a* > ndb_error_report_20100106200738.tar.bz2 and unpacking it worked fine. /Gustaf
[18 Jan 2010 13:09]
Jonas Oreland
reproduced. the problem is related to index being dropped while transactions ongoing. this is likely a regression from 6.3 (but havent tested yet)
[18 Jan 2010 14:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97258 3081 Jonas Oreland 2010-01-18 ndb - bug#50118 commit testcase to 6.3
[18 Jan 2010 14:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97263 3342 Jonas Oreland 2010-01-18 ndb - bug#50118 - make sure that index op is rejected when index is dropped
[18 Jan 2010 14:49]
Bugs System
Pushed into 5.1.41-ndb-7.0.11 (revid:jonas@mysql.com-20100118144630-9wodo8gd5m0ss3bl) (version source revid:jonas@mysql.com-20100118144630-9wodo8gd5m0ss3bl) (merge vers: 5.1.41-ndb-7.0.11) (pib:16)
[18 Jan 2010 14:49]
Bugs System
Pushed into 5.1.41-ndb-7.1.0 (revid:jonas@mysql.com-20100118144759-0o14v1e8cwx70cj4) (version source revid:jonas@mysql.com-20100118144759-0o14v1e8cwx70cj4) (merge vers: 5.1.41-ndb-7.1.0) (pib:16)
[18 Jan 2010 14:53]
Jonas Oreland
pushed to 7.0.11 (and test prg also to 6.3) docs: dropping unique indexes in parallel with using them could cause node (cluster) crash
[18 Jan 2010 15:27]
Jon Stephens
DOcumented bugfix in the NDB-6.3.31 and 7.0.11 changelogs as follows:
Dropping unique indexes in parallel while they were in use could
cause node and cluster failures.
Closed.
