ndb - bug#50118 - make sure that index op is rejected when index is dropped